fixed header collapse glitch

--- a/src/styles/giversandgamers.scss
+++ b/src/styles/giversandgamers.scss
@@ -4,7 +4,9 @@
 @use "vars.css";
 
 :root {
-    --dim-logo-height: 150px;
+    --dim-drips-height: 118px;
+    --dim-header-base: 150px;
+    --dim-logo-height: var(--dim-header-base);
     --dim-logo-margin: 10px;
     --drop-shadow: 2px 2px 2px var(--color-gng-grey);
     --font-size: 18pt;
@@ -42,6 +44,22 @@ header.logo {
     right: 0;
     left: 0;
     z-index: 10;
+
+    /**
+     * To avoid glitches where the collapsed header immediately shifts
+     * the scroll offset and deactivates the collapsed header, give the
+     * containing <header> element a fixed height.
+     *
+     * With a transparent background, the actual height value doesn't matter,
+     * as long as it's at least tall enough to contain its child elements
+     * and "push" its next sibling below the header content.
+     *
+     * Too large of a size may have side-effects on smaller viewports. We
+     * do NOT want to calculate this using vars that are adjusted with
+     * media queries (i.e., --dim-logo-height). Instead, initialize that value
+     * with a common variable.
+     */
+     height: calc(var(--dim-header-base) + var(--dim-drips-height));
 
     * {
         padding: 0;
@@ -97,7 +115,7 @@ header.logo {
     .drips {
         transition: none; // don't animate the rotation
         background-color: var(--color-gng-white);
-        height: 118px;
+        height: var(--dim-drips-height);
         transform: rotate(180deg);
         clip-path: path('M0,45L18.5,47.5C36.9,50,74,55,111,50C147.7,45,185,30,222,42.5C258.5,55,295,95,332,102.5C369.2,110,406,85,443,82.5C480,80,517,100,554,107.5C590.8,115,628,110,665,97.5C701.5,85,738,65,775,67.5C812.3,70,849,95,886,87.5C923.1,80,960,40,997,35C1033.8,30,1071,60,1108,75C1144.6,90,1182,90,1218,92.5C1255.4,95,1292,100,1329,90C1366.2,80,1403,55,1440,57.5C1476.9,60,1514,90,1551,95C1587.7,100,1625,80,1662,72.5C1698.5,65,1735,70,1772,80C1809.2,90,1846,105,1883,112.5C1920,120,1957,120,1994,107.5C2030.8,95,2068,70,2105,57.5C2141.5,45,2178,45,2215,47.5C2252.3,50,2289,55,2326,70C2363.1,85,2400,110,2437,112.5C2473.8,115,2511,95,2548,77.5C2584.6,60,2622,45,2640,37.5L2658.5,30L2658.5,150L2640,150C2621.5,150,2585,150,2548,150C2510.8,150,2474,150,2437,150C2400,150,2363,150,2326,150C2289.2,150,2252,150,2215,150C2178.5,150,2142,150,2105,150C2067.7,150,2031,150,1994,150C1956.9,150,1920,150,1883,150C1846.2,150,1809,150,1772,150C1735.4,150,1698,150,1662,150C1624.6,150,1588,150,1551,150C1513.8,150,1477,150,1440,150C1403.1,150,1366,150,1329,150C1292.3,150,1255,150,1218,150C1181.5,150,1145,150,1108,150C1070.8,150,1034,150,997,150C960,150,923,150,886,150C849.2,150,812,150,775,150C738.5,150,702,150,665,150C627.7,150,591,150,554,150C516.9,150,480,150,443,150C406.2,150,369,150,332,150C295.4,150,258,150,222,150C184.6,150,148,150,111,150C73.8,150,37,150,18,150L0,150Z');
         // clip-path: path("m0,85.75l18.5,-2.04c18.4,-2.04 55.5,-6.12 92.5,-2.04c36.7,4.08 74,16.33 111,6.12c36.5,-10.21 73,-42.87 110,-49c37.2,-6.12 74,14.29 111,16.33c37,2.04 74,-14.29 111,-20.42c36.8,-6.12 74,-2.04 111,8.17c36.5,10.21 73,26.54 110,24.5c37.3,-2.04 74,-22.46 111,-16.33c37.1,6.12 74,38.79 111,42.87c36.8,4.08 74,-20.42 111,-32.67c36.6,-12.25 74,-12.25 110,-14.29c37.4,-2.04 74,-6.12 111,2.04c37.2,8.17 74,28.58 111,26.54c36.9,-2.04 74,-26.54 111,-30.62c36.7,-4.08 74,12.25 111,18.37c36.5,6.12 73,2.04 110,-6.12c37.2,-8.17 74,-20.42 111,-26.54c37,-6.12 74,-6.12 111,4.08c36.8,10.21 74,30.62 111,40.83c36.5,10.21 73,10.21 110,8.17c37.3,-2.04 74,-6.12 111,-18.37c37.1,-12.25 74,-32.67 111,-34.71c36.8,-2.04 74,14.29 111,28.58c36.6,14.29 74,26.54 92,32.67l18.5,6.12l0,-98l-18.5,0c-18.5,0 -55,0 -92,0c-37.2,0 -74,0 -111,0c-37,0 -74,0 -111,0c-36.8,0 -74,0 -111,0c-36.5,0 -73,0 -110,0c-37.3,0 -74,0 -111,0c-37.1,0 -74,0 -111,0c-36.8,0 -74,0 -111,0c-36.6,0 -74,0 -110,0c-37.4,0 -74,0 -111,0c-37.2,0 -74,0 -111,0c-36.9,0 -74,0 -111,0c-36.7,0 -74,0 -111,0c-36.5,0 -73,0 -110,0c-37.2,0 -74,0 -111,0c-37,0 -74,0 -111,0c-36.8,0 -74,0 -111,0c-36.5,0 -73,0 -110,0c-37.3,0 -74,0 -111,0c-37.1,0 -74,0 -111,0c-36.8,0 -74,0 -111,0c-36.6,0 -74,0 -110,0c-37.4,0 -74,0 -111,0c-37.2,0 -74,0 -93,0l-18,0l0,85.75z");
